--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,5 @@
-<ul>
-  <li>Categorias
-    <li></li>
-  </li>
-  <li>Séries</li>
-  <li>Updates</li>
+<ul class="menu">
+  <li><a href="/blog/categorias/">Categorias</a></li>
+  <li><a href="/blog/series/">Séries</a></li>
+  <li><a href="/blog/updates/">Updates</a></li>
 </ul>
