--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -1,15 +1,11 @@
 <div class="topbar">
-  <a href="#">Logo</a>
+  <div class="logo"><img src="{{ "/assets/img/logo.png" | relative_url }}" alt="Logo" width="30"></div>
 
-  <ul>
-    <li>Início</li>
-    <li>O Projeto</li>
-    <li>Blog</li>
-    <li>Now</li>
-    <li>Contato</li>
+  <ul class="menu">
+    <li><a href="/">Início</a></li>
+    <li><a href="/o-projeto/">O Projeto</a></li>
+    <li><a href="/blog/">Blog</a></li>
+    <li><a href="/now/">Now</a></li>
+    <li><a href="/contato/">Contato</a></li>
   </ul>
-
-  <form>
-    <!-- SEARCH -->
-  </form>
 </div>
