--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,38 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="{{ page.lang | default: site.lang | default: "pt-br" }}">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="{{ "/assets/css/custom.css" | relative_url }}">
+
+    <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
+
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   </head>
 
   <body>
-    {% include topbar.html %}
+    <div class="wrapper">
+      <div class="container">
+        {% include topbar.html %}
 
-    {{ content }}
+        {% if page.h1 %}
+          {% include header.html %}
+          {% include navbar.html %}
+        {% endif %}
+      </div>
+    </div>
 
-    {% include footer.html %}
+    <div class="wrapper">
+      <div class="container">
+        {{ content }}
+      </div>
+    </div>
+
+    <div class="wrapper">
+      <div class="container">
+        {% include footer.html %}
+      </div>
+    </div>
   </body>
 </html>
