--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
-
-<h1>{{ include.title }}</h1>
-<h2>{{ include.description }}</h2>
+<div class="header">
+  <h1 class="title">{{ page.h1 }}</h1>
+  <h2 class="description">{{ page.h2 }}</h2>
+</div>
