Foi realizados grandes modificações e o site está com apenas alguns detalhes faltando

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <div class="header">
-  <h1 class="title">{{ page.h1 }}</h1>
-  <h2 class="description">{{ page.h2 }}</h2>
+  <h1 class="page-title">{{ page.page_title }}</h1>
+  <h2 class="page-description">{{ page.page_description }}</h2>
 </div>
