--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,16 @@
-<ul class="menu">
-  <li><a href="/blog/categorias/">Categorias</a></li>
-  <li><a href="/blog/series/">Séries</a></li>
-  <li><a href="/blog/updates/">Updates</a></li>
-</ul>
+<div class="navbar">
+  <ul class="menu">
+    <li class="toggle"><a href="/blog/categorias/">Categorias <i class="fas fa-caret-down"></i></a>
+      <ul class="menu dropdown">
+        <li><a href="#">Programas Gratuitos</a></li>
+        <li><a href="#">DIY</a></li>
+        <li><a href="#">Tutoriais</a></li>
+        <li><a href="#">Dicas</a></li>
+        <li><a href="#">Hobbies</a></li>
+        <li><a href="#">Análises</a></li>
+      </ul>
+    </li>
+    <li><a href="/blog/series/">Séries</a></li>
+    <li><a href="/blog/updates/">Updates</a></li>
+  </ul>
+</div>
