--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,8 +1,22 @@
-.topbar {
-  display: flex;
-  align-items: center;
-}
+.header {
+  text-align: center;
 
-.logo {
-  flex-grow: 1;
+  * {
+    margin-bottom: 0;
+  }
+
+  .page-title {
+    display: inline-block;
+    padding: 4rem 3rem 1rem;
+    border-bottom: 4px solid #C4C4C4;
+    font-size: 2.25rem;
+    font-family: 'Roboto Condensed';
+  }
+
+  .page-description {
+    font-weight: lighter;
+    padding: 2rem 0 4rem;
+    max-width: 30rem;
+    margin: auto;
+  }
 }
