--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -1,16 +1,16 @@
 .menu {
-  display: flex;
   list-style: none;
-  text-align: center;
   margin: 0;
   padding: 0;
+  display: flex;
 
-  a {
+  a, .item-inner {
     display: block;
     padding: 1rem;
 
     &:hover {
       background: #ddd;
+      text-decoration: none;
     }
   }
 }
