--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,4 @@
 <div class="footer">
-  <p class="copy">&copy; Desenhando com Mack - {{ 'now' | date: "%Y" }}</p>
 
   <ul class="menu">
     <li><a href="/faq/">FAQ</a></li>
@@ -10,10 +9,12 @@
   </ul>
 
   <ul class="menu social">
-    <li class="email"><a href="mailto:desenhandocommack@gmail.com">desenhandocommack@gmail.com</a></li>
     <li><a href="//youtube.com/desenhandocommack"><i class="fab fa-youtube fa-2x"></i></a></li>
     <li><a href="//facebook.com/desenhandocommack"><i class="fab fa-facebook-f fa-2x"></i></a></li>
     <li><a href="//instagram.com/desenhandocommack"><i class="fab fa-instagram fa-2x"></i></a></li>
     <li><a href="//twitter.com/mackdesenhos"><i class="fab fa-twitter fa-2x"></i></a></li>
   </ul>
+
+
+  <div class="copy">&copy; Desenhando com Mack - {{ 'now' | date: "%Y" }}</div>
 </div>
