Parte do blog quase pronta

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,20 +1,20 @@
-<div class="footer">
+<div class="footer py-4 mt-5">
 
-  <ul class="menu">
-    <li><a href="/faq/">FAQ</a></li>
-    <li><a href="/consquistas/">CONQUISTAS</a></li>
-    <li><a href="/recursos/">RECURSOS</a></li>
-    <li><a href="/info/">INFO</a></li>
-    <li><a href="/portfolio/">PORTFOLIO</a></li>
+  <ul class="nav flex-column flex-sm-row text-center justify-content-center">
+    <li class="nav-item"><a class="nav-link" href="/faq/">FAQ</a></li>
+    <li class="nav-item"><a class="nav-link" href="/consquistas/">CONQUISTAS</a></li>
+    <li class="nav-item"><a class="nav-link" href="/recursos/">RECURSOS</a></li>
+    <li class="nav-item"><a class="nav-link" href="/info/">INFO</a></li>
+    <li class="nav-item"><a class="nav-link" href="/portfolio/">PORTFOLIO</a></li>
   </ul>
 
-  <ul class="menu social">
-    <li><a href="//youtube.com/desenhandocommack"><i class="fab fa-youtube fa-2x"></i></a></li>
-    <li><a href="//facebook.com/desenhandocommack"><i class="fab fa-facebook-f fa-2x"></i></a></li>
-    <li><a href="//instagram.com/desenhandocommack"><i class="fab fa-instagram fa-2x"></i></a></li>
-    <li><a href="//twitter.com/mackdesenhos"><i class="fab fa-twitter fa-2x"></i></a></li>
+  <ul class="nav text-center justify-content-center my-4">
+    <li class="nav-item"><a class="nav-link" href="//youtube.com/desenhandocommack"><i class="fab fa-youtube fa-2x"></i></a></li>
+    <li class="nav-item"><a class="nav-link" href="//facebook.com/desenhandocommack"><i class="fab fa-facebook-f fa-2x"></i></a></li>
+    <li class="nav-item"><a class="nav-link" href="//instagram.com/desenhandocommack"><i class="fab fa-instagram fa-2x"></i></a></li>
+    <li class="nav-item"><a class="nav-link" href="//twitter.com/mackdesenhos"><i class="fab fa-twitter fa-2x"></i></a></li>
   </ul>
 
 
-  <div class="copy">&copy; Desenhando com Mack - {{ 'now' | date: "%Y" }}</div>
+  <div class="copy text-center">&copy; Desenhando com Mack - {{ 'now' | date: "%Y" }}</div>
 </div>
