--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar">
+<!-- <div class="navbar">
   <ul class="menu">
     <li class="toggle"><a href="/blog/categorias/">Categorias <i class="fas fa-caret-down"></i></a>
       <ul class="menu dropdown">
@@ -13,4 +13,24 @@
     <li><a href="/blog/series/">Séries</a></li>
     <li><a href="/blog/updates/">Updates</a></li>
   </ul>
-</div>
+</div> -->
+
+<ul class="nav my-navbar flex-column text-center justify-content-center flex-sm-row">
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+      <span class="text">Categorias</span></a>
+
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Ilustrações</a></li>
+      <li><a class="dropdown-item" href="#">Programas Gratuitos</a></li>
+      <li><a class="dropdown-item" href="#">DIY</a></li>
+      <li><a class="dropdown-item" href="#">Tutoriais</a></li>
+      <li><a class="dropdown-item" href="#">Dicas</a></li>
+      <li><a class="dropdown-item" href="#">Hobbies</a></li>
+      <li><a class="dropdown-item" href="#">Análises</a></li>
+    </ul>
+  </li>
+
+  <li class="nav-item"><a class="nav-link" href="#">Séries</a></li>
+  <li class="nav-item"><a class="nav-link" href="#">Updates</a></li>
+</ul>
