--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
     {{ content }}
 
-    <div class="wrapper footer-outer">
+    <div class="wrapper footer-wrapper">
       <div class="container">{% include footer.html %}</div>
     </div>
 
