--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div class="header">
-  <h1 class="page-title">{{ page.page_title }}</h1>
-  <h2 class="page-description">{{ page.page_description }}</h2>
+<div class="header text-center py-5">
+  <h1 class="page-title d-inline-block pb-4 px-5 mb-5">{{ page.page_title }}</h1>
+  <h2 class="page-description my-0">{{ page.page_description }}</h2>
 </div>
