--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,32 +1,34 @@
 ---
-layout:  blog
+layout: blog
 ---
 
-<div class="post-header">
-  <h1 class="post-title">{{ page.title }}</h1>
+<div class="post-container">
+  <div class="post-header mt-5">
+    <h1 class="post-title">{{ page.title }}</h1>
 
-  <div class="post-data">
-    <div class="post-author-data">
-      <div class="post-author-image">
-        <img src="https://placeimg.com/45/45/people">
+    <div class="post-data d-flex my-5">
+      <div class="post-author-data" style="white-space: nowrap;">
+        <div class="post-author-image float-left mr-2">
+          <img src="https://placeimg.com/45/45/people">
+        </div>
+
+        <div class="post-author">Escrito por <span class="post-author-name">{{ page.author | default: site.author }}</span></div>
+
+        <div class="post-date">Em {{ page.date | date: "%d/%m/%Y" }}</div>
       </div>
 
-      <div class="post-author">Escrito por <span class="post-author-name">{{ page.author | default: site.author }}</span></div>
-
-      <div class="post-date">Em {{ page.date | date: "%d/%m/%Y" }}</div>
-    </div>
-
-    <div class="post-share">
-      <i class="fab fa-facebook-square fa-3x"></i>
-      <i class="fab fa-twitter-square fa-3x"></i>
+      <div class="post-share ml-auto">
+        <i class="fab fa-facebook-square fa-3x"></i>
+        <i class="fab fa-twitter-square fa-3x"></i>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="post-body">
-  {{ content }}
-</div>
+  <div class="post-body">
+    {{ content }}
+  </div>
 
-<div class="post-ad">
-  <a href="https://placeholder.com"><img src="http://via.placeholder.com/728x90"></a>
+  <div class="post-ad">
+    <a href="https://placeholder.com"><img src="http://via.placeholder.com/728x90"></a>
+  </div>
 </div>
