--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1,4 +1,108 @@
 ---
 ---
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+
+$font-family-sans-serif:
+  "Roboto",
+
+  // Safari for OS X and iOS (San Francisco)
+  -apple-system,
+  // Chrome < 56 for OS X (San Francisco)
+  BlinkMacSystemFont,
+  // Windows
+  "Segoe UI",
+  // Android
+  "Roboto",
+  // Basic web fallback
+  "Helvetica Neue", Arial, sans-serif,
+  // Emoji fonts
+  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+
+$color: #EE4C8B;
 
 @import "bootstrap/scss/bootstrap";
+
+.octicon {
+  display: inline-block;
+  vertical-align: top;
+  fill: currentColor;
+  color: $color;
+}
+
+.pagi {
+  .disabled {
+    color: gray;
+  }
+}
+
+
+body {
+  color: #333;
+}
+
+.section-blog {
+  background: #E0DEDE;
+}
+
+.footer-wrapper {
+  background: #383C58;
+
+  .copy {
+    color: #bbb;
+  }
+}
+
+.header {
+  color: #808080;
+
+  .page-title {
+    font-size: 2rem;
+    border-bottom: 3px solid #808080;
+  }
+
+  .page-description {
+    font-size: 1.5rem;
+    font-weight: lighter;
+    margin: auto;
+
+    @include media-breakpoint-up(lg) {
+      max-width: 40%;
+    }
+  }
+}
+
+.blog-index {
+  .post-category {
+    color: $color;
+  }
+}
+
+.my-navbar {
+  font-size: 1.375rem;
+  font-weight: 300;
+
+
+  a, .text {
+    color: #808080;
+  }
+
+  .dropdown-toggle {
+    color: $color;
+  }
+}
+
+
+
+.post-container {
+
+  .post-body {
+    img {
+      max-width: 100%;
+    }
+  }
+
+  @include media-breakpoint-up(lg) {
+    max-width: 80%;
+    margin: auto;
+  }
+}
