--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   </head>
 
-  <body>
+  <body class="nojs">
     <header class="header">
       {% include topbar.html %}
 
@@ -22,5 +22,7 @@
     <main class="main">{{ content }}</main>
 
     <footer class="footer">{% include footer.html %}</footer>
+
+    <script src="{{ "/assets/js/functions.js" | relative_url }}" charset="utf-8"></script>
   </body>
 </html>
