--- a/_sass/_card.scss
+++ b/_sass/_card.scss
@@ -1,15 +1,88 @@
-.card {
+.card-container {
+    @include clearfix;
+    margin-top: 5rem;
+}
 
+.card {
+    font-family: "Roboto Condensed";
+    padding: 0 1.5rem;
+    margin-bottom: 5rem;
+
+    @media screen and (min-width: 700px) {
+        float: left;
+        width: 50%;
+    }
+
+    @media screen and (min-width: 960px) {
+        width: 33.33333%;
+    }
+}
+
+.card-separator {
+    margin: 0;
+    border: none;
+    clear: both;
+
+    @media screen and (min-width: 700px) {
+        &.w33 {
+            display: none;
+        }
+    }
+
+    @media screen and (min-width: 960px) {
+        &.w50 { display: none;  }
+        &.w33 { display: block; }
+    }
+}
+.card-next, .card-previous {
+    font-family: "Roboto Condensed";
+    font-size: 1.5rem;
+    font-weight: 900;
+    color: #808080;
+
+
+
+    &.disabled {
+        color: #b0b0b0;
+    }
+}
+
+.card-arrow {
+    color: #EE4C8B;
+
+    &.disabled {
+        color: #b0b0b0;
+    }
+}
+
+.card-pagination {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5rem;
+
+    a:hover {
+        text-decoration: none;
+    }
 }
 
 .card-title {
-
+    font-weight: lighter;
+    font-size: 1.375rem;
+    a { color: #333; }
+    text-align: center;
+    margin: 0 1rem 0;
 }
 
 .card-thumbnail {
-
+    display: block;
+    width: 100%;
+    max-height: 160px;
 }
 
 .card-category {
-  
+    font-size: 1.125rem;
+    color: #EE4C8B;
+    font-weight: bolder;
+    margin-bottom: 0;
 }
