--- a/_sass/_card.scss
+++ b/_sass/_card.scss
@@ -1,6 +1,6 @@
 .card-container {
     @include clearfix;
-    margin-top: 5rem;
+    // margin-top: 5rem;
 }
 
 .card {
@@ -59,7 +59,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 5rem;
+    // margin-bottom: 5rem;
 
     a:hover {
         text-decoration: none;
