--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -1,17 +1,38 @@
 .post {
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 1.3125rem;
+    max-width: 50rem;
+    margin: auto;
 
+    img {
+        max-width: 100%;
+    }
+}
+
+.post-info {
+    @include clearfix;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    position: relative;
+}
+
+.post-share {
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 
 .post-title {
-
+    font-family: "Roboto Condensed";
+    font-weight: lighter;
+    font-size: 2.125rem;
 }
 
 .post-author-avatar {
-
-}
-
-.post-author-name {
-
+    float: left;
+    border-radius: 50%;
+    margin-right: 1rem;
 }
 
 .post-body {
