--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,9 +1,13 @@
 .header {
-    background: #bbb;
+    // background: #bbb;
     font-family: "Roboto";
     color: #808080;
     text-align: center;
     margin-bottom: 5rem;
+}
+
+.gray {
+    background-color: #E0DEDE;
 }
 
 .page-title {
