--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,14 +8,13 @@
         <li><a href="#">INFO</a></li>
         <li><a href="#">PORTFOLIO</a></li>
     </ul>
-
     <div class="social">
-        <div class="social-email">contato@desenhandocommack.com.br</div>
+        <div class="social-email"><a href="mailto:{{ site.contact.email }}">{{ site.contact.email }}</a></div>
         <ul class="social-list">
-            <li><a href="#"><i class="fa-2x fab fa-youtube"></i></a></li>
-            <li><a href="#"><i class="fa-2x fab fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa-2x fab fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fa-2x fab fa-twitter"></i></a></li>
+            <li><a href="//{{ site.contact.youtube }}" target="_blank"><i class="fa-2x fab fa-youtube"></i></a></li>
+            <li><a href="//{{ site.contact.facebook }}" target="_blank"><i class="fa-2x fab fa-facebook"></i></a></li>
+            <li><a href="//{{ site.contact.instagram }}" target="_blank"><i class="fa-2x fab fa-instagram"></i></a></li>
+            <li><a href="//{{ site.contact.twitter }}" target="_blank"><i class="fa-2x fab fa-twitter"></i></a></li>
         </ul>
     </div>
 </div>
