--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   </head>
 
   <body class="nojs">
-    <header class="header">
+    <header class="header {{ page.bgcolor }}">
       {% include topbar.html %}
 
       {% if page.has_header %}{% include header.html %}{% endif %}
