--- a/_sass/_card.scss
+++ b/_sass/_card.scss
@@ -71,10 +71,11 @@
     font-size: 1.375rem;
     a { color: #333; }
     text-align: center;
-    margin: 0 1rem 0;
+    margin: 1rem 1rem 0;
 }
 
 .card-thumbnail {
+    border-radius: 5px 5px 0 0;
     display: block;
     width: 100%;
     max-height: 160px;
