--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1,7 +1,7 @@
 ---
 ---
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
-
+// @import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700|Roboto:300,300i,900');
 // Mixin itself
 @mixin clearfix() {
   &::after {
@@ -20,8 +20,67 @@
 @import "post";
 
 
-
+.header, .footer {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
 .main {
     max-width: 70rem;
+    padding: 0 1rem;
     margin: 0 auto;
+}
+
+img {
+  max-width: 100%;
+}
+
+.section1 {
+  background-image: url("/assets/img/arte.jpg");
+  background-size: 100% 100%;
+  text-align: center;
+  padding: 10rem 0;
+}
+
+.section2 {
+  text-align: center;
+  background-image: url("/assets/img/trilha.jpg");
+  background-size: 100% auto;
+  background-position: center -1800px;
+  padding: 3rem 0;
+}
+
+.section3 {
+  text-align: center;
+  a {
+    display: inline-block;
+    margin: 5rem 2rem;
+
+    &:hover img {
+      filter: brightness(150%);
+    }
+  }
+}
+
+.section h1 {
+  font-family: "Roboto Condensed";
+  font-size: 36px;
+  color: #fee;
+  max-width: 50rem;
+  text-align: center;
+  margin: auto;
+  display: inline-block;
+  border-bottom: solid 4px #fee;
+  padding-bottom: 1rem;
+  margin-bottom: 3rem;
+}
+
+.section p {
+  color: #fee;
+  font-size: 24px;
+  font-weight: lighter;
+  font-family: "Roboto";
+  margin: auto;
+  max-width: 50rem;
+  text-align: center;
+  margin-bottom: 2rem;
 }
