--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,8 +1,17 @@
 .footer {
     background: #383C58;
     color: #ddd;
+
+    // a {
+    //   color: #ddd;
+    //   &:hover {
+    //     text-decoration: none;
+    //     color: #999;
+    //   }
+    // }
+
     padding: 3rem 0;
-    margin-top: 5rem;
+    // margin-top: 5rem;
 }
 
 .footer-info {
