--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -3,7 +3,7 @@
     font-family: "Roboto";
     color: #808080;
     text-align: center;
-    margin-bottom: 5rem;
+    // margin-bottom: 5rem;
 }
 
 .gray {
