modificado a cor dos titulos das postagens quando o mouse passa por cima na pagina do blog

--- a/_sass/_card.scss
+++ b/_sass/_card.scss
@@ -69,7 +69,13 @@
 .card-title {
     font-weight: lighter;
     font-size: 1.375rem;
-    a { color: #333; }
+    a {
+      color: #333;
+      &:hover {
+        text-decoration: none;
+        color: #EE4C8B;
+      }
+    }
     text-align: center;
     margin: 1rem 1rem 0;
 }
