--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,17 @@
 layout: page
 ---
 <div class="post">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <ins class="adsbygoogle"
+         style="display:block; text-align:center;"
+         data-ad-layout="in-article"
+         data-ad-format="fluid"
+         data-ad-client="ca-pub-9490703409315867"
+         data-ad-slot="7989305895"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
     <h1 class="post-title">{{ page.title }}</h1>
     <div class="post-info">
         <img class="post-author-avatar" src="{{ page.author.avatar | default: site.author.avatar }}" width="64" alt="Avatar do autor">
