--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: page
         <div class="post-date">Em {{ page.date | date: "%d/%m/%Y" }}</div>
 
         <div class="post-share">
-          <a href="#"><img src="/assets/img/icon-share-facebook.png"></a>
+          <a id="facebook-share-button"><img src="/assets/img/icon-share-facebook.png"></a>
           <a href="#"><img src="/assets/img/icon-share-twitter.png"></a>
         </div>
     </div>
