--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -37,32 +37,50 @@ img {
 .section-wrapper-1 {
   background: url("/assets/img/arte.jpg") no-repeat center center;
   background-size: cover;
-  text-align: center;
-  padding: 10rem 0;
 }
 
 .section-wrapper-2 {
-  background: url("/assets/img/trilha.jpg") no-repeat center center;
-  background-size: cover;
-  text-align: center;
-  padding: 3rem 0;
-  display: none;
+  background: #ECECEC;
+
+  h2 {
+    margin-top: 1rem;
+    font-family: "Roboto Condensed";
+  }
+
+  h1, h2, p {
+    color: #808080 !important;
+    border-color: #808080 !important;
+  }
 }
 
 .section-wrapper-3 {
-  display: none;
+  background: url("/assets/img/trilha.jpg") no-repeat center center;
+  background-size: cover;
 }
 
-.section3 {
+
+.section4 {
+  background: #ECECEC;
   text-align: center;
+
+  h1, h2, p {
+    color: #808080 !important;
+    border-color: #808080 !important;
+  }
+
   a {
     display: inline-block;
-    margin: 5rem 2rem 0;
+    margin: 0 2rem 1rem;
 
     &:hover img {
-      filter: brightness(150%);
+      filter: brightness(180%);
     }
   }
+}
+
+.section {
+  text-align: center;
+  padding: 5rem 0;
 }
 
 .section h1 {
