--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <meta property="og:url"           content="{{ page.url | absolute_url }}" />
     <meta property="og:type"          content="article" />
     <meta property="og:title"         content="{{ page.title }}" />
+    <meta property="og:description"   content="{{ page.description }}" />
     <meta property="og:image"         content="{{ page.thumbnail | absolute_url }}" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
