adicionado meta tag fb:app_id

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
 
+    <meta property="fb:app_id"        content="192466878110093" />
     <meta property="og:url"           content="{{ page.url | absolute_url }}" />
     <meta property="og:type"          content="article" />
     <meta property="og:title"         content="{{ page.title }}" />
