configuração inicial do botão do Twitter

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,12 @@ layout: page
 
         <div class="post-share">
           <a id="facebook-share-button"><img src="/assets/img/icon-share-facebook.png"></a>
-          <a href="#"><img src="/assets/img/icon-share-twitter.png"></a>
+
+          <a href="https://twitter.com/share?ref_src=twsrc%5Etfw"
+          class="twitter-share-button"
+          data-lang="pt"
+          data-show-count="false"><img src="/assets/img/icon-share-twitter.png" alt="Tweetar"></a>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
     <div class="post-body">{{ content }}</div>
