--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,24 +20,14 @@
   </head>
 
   <body class="nojs">
-    <script>
-        window.fbAsyncInit = function() {
-          FB.init({
-            appId            : '192466878110093',
-            autoLogAppEvents : true,
-            xfbml            : true,
-            version          : 'v3.0'
-          });
-        };
-
-        (function(d, s, id){
-           var js, fjs = d.getElementsByTagName(s)[0];
-           if (d.getElementById(id)) {return;}
-           js = d.createElement(s); js.id = id;
-           js.src = "https://connect.facebook.net/en_US/sdk.js";
-           fjs.parentNode.insertBefore(js, fjs);
-         }(document, 'script', 'facebook-jssdk'));
-      </script>
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v3.0&appId=192466878110093&autoLogAppEvents=1';
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
 
     <header class="header {{ page.bgcolor }}">
       {% include topbar.html %}
