--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,13 +9,8 @@ layout: page
         <div class="post-date">Em {{ page.date | date: "%d/%m/%Y" }}</div>
 
         <div class="post-share">
-          <a id="facebook-share-button"><img src="/assets/img/icon-share-facebook.png"></a>
-
-          <a href="https://twitter.com/share?ref_src=twsrc%5Etfw"
-          class="twitter-share-button"
-          data-lang="pt"
-          data-show-count="false"><img src="/assets/img/icon-share-twitter.png" alt="Tweetar"></a>
-          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{ page.url | absolute_url }}&src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+          <a href="https://twitter.com/share?ref_src={{ page.url | absolute_url }}" class="twitter-share-button" data-size="large" data-via="mackdesenhos" data-lang="pt" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
     <div class="post-body">{{ content }}</div>
