--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -106,3 +106,13 @@ img {
   text-align: center;
   margin-bottom: 2rem;
 }
+
+.category-page-heading {
+  padding-left: 1.5rem;
+  margin-bottom: 2.5rem;
+  font-family: "Roboto Condensed";
+}
+
+.category-page-text {
+  color: #808080;
+}
