corrigido core das setas de naveção do blog

--- a/_sass/_card.scss
+++ b/_sass/_card.scss
@@ -43,7 +43,7 @@
 
 
     &.disabled {
-        color: #b0b0b0;
+        color: #c0c0c0;
     }
 }
 
@@ -51,7 +51,7 @@
     color: #EE4C8B;
 
     &.disabled {
-        color: #b0b0b0;
+        color: #c0c0c0;
     }
 }
 
