--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -111,6 +111,7 @@ img {
   padding-left: 1.5rem;
   margin-bottom: 2.5rem;
   font-family: "Roboto Condensed";
+  text-transform: uppercase;
 }
 
 .category-page-text {
