mudei o nome da página FAQ

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,11 +2,9 @@
     <span class="footer-copy">&copy; Desenhando com Mack &ndash; 2018</span>
 
     <ul class="footer-pages">
-        <li><a href="#">FAQ</a></li>
-        <li><a href="#">CONQUISTAS</a></li>
-        <li><a href="#">RECURSOS</a></li>
-        <li><a href="#">INFO</a></li>
-        <li><a href="#">PORTFOLIO</a></li>
+        <li><a href="/">HOME</a></li>
+        <li><a href="/blog/">BLOG</a></li>
+        <li><a href="/faq/">FAQ</a></li>
     </ul>
     <div class="social">
         <div class="social-email"><a href="mailto:{{ site.contact.email }}">{{ site.contact.email }}</a></div>
