--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -34,8 +34,7 @@
     padding: 0;
     margin: 0;
     list-style: none;
-    display: none;
-    // display: flex;
+    display: flex;
     justify-content: center;
 
     a {
