--- a/_sass/_card.scss
+++ b/_sass/_card.scss
@@ -34,6 +34,7 @@
         &.w33 { display: block; }
     }
 }
+
 .card-next, .card-previous {
     font-family: "Roboto Condensed";
     font-size: 1.5rem;
@@ -78,11 +79,14 @@
     margin: 1rem 1rem 0;
 }
 
-.card-thumbnail {
-    border-radius: 5px 5px 0 0;
-    display: block;
-    width: 100%;
-    max-height: 160px;
+.card-thumbnail-test {
+  height: 100px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  @media screen and (min-width: 360px) {
+    height: 160px;
+  }
 }
 
 .card-category {
