Mudei a solução de thumbnails do blog. Ao invés de usar um <img>, estou usando imagens como background de uma <div>

--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -8,9 +8,10 @@
             {% for i in site.topbar %}
 
             {% capture url %}{{ i | downcase | slugify | append: "/" | prepend: "/" | replace: "/início/", "/" }}{% endcapture %}
+            {% capture page_url %}{{ page.url | replace: "index.html", "" }}{% endcapture %}
 
             <li class="topbar-item">
-                {% if page.url == url %}
+                {% if page_url == url %}
                 <span class="topbar-text current">{{ i }}</span>
                 {% else %}
                 <a class="topbar-text" href="{{ url }}">{{ i }}</a>
