--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -59,7 +59,7 @@ img {
 }
 
 .section-wrapper-3 {
-  background: url("/assets/img/trilha.jpg") no-repeat center center;
+  background: url("/assets/img/junte-se-a-trilha.jpg") no-repeat center center;
   background-size: cover;
 }
 
