--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -1,4 +1,3 @@
-
 <div class="card-container">
     {% for post in paginator.posts %}
 
@@ -7,7 +6,11 @@
     {% if forloop.index == 5 %}<hr class="card-separator w50">{% endif %}
 
     <article class="card">
+        {% if page.autopages %}
+        <span class="card-category span">{{ post.category }}</span>
+        {% else %}
         <a href="/blog/categoria/{{ post.category | slugfy }}/" class="card-category">{{ post.category }}</a>
+        {% endif %}
         <!-- <div class="card-thumbnail-wrapper"><img class="card-thumbnail" src="{{ post.thumbnail }}" alt="Imagem de capa do post {{ post.title }}"></div> -->
         <div class="card-thumbnail-test" style="background-image: url({{ post.thumbnail }})"></div>
         <h1 class="card-title"><a href="{{ post.url }}">{{ post.title }}</a></h1>
