--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -20,6 +20,12 @@
 @import "post";
 @import "faq";
 
+blockquote {
+  background: #efefef;
+  padding-left: 1.5rem;
+  border-left: solid 4px #888;
+}
+
 html {
   height: 100%;
   background: #383C58;
