--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
     {{ content }}
 
     <footer class="footer">{% include footer.html %}</footer>
-    <script src="{{ "/assets/js/functions.js" | relative_url }}" charset="utf-8"></script>
+    <script src="{{ '/assets/js/functions.js' | relative_url }}" charset="utf-8"></script>
     <script>
       var facebookButton = document.getElementById('facebook-share-button');
       if (facebookButton) {
