Crescentei Gulp ao workflow e fiz mudanças pequenas no layout do site

--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -2,7 +2,7 @@
     <img class="topbar-logo" src="/assets/img/logo.png" alt="Logo do site" height="50">
 
     <div class="topbar-menu">
-        <span id="toggle"><i class="topbar-toggle fas fa-bars fa-2x"></i></span>
+        <span id="toggle"><i class="topbar-toggle fas fa-bars fa"></i></span>
 
         <ul class="topbar-list" id="menu">
             {% for i in site.topbar %}
