--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -2,22 +2,33 @@
     <img class="topbar-logo" src="/assets/img/logo.png" alt="Logo do site" height="50">
 
     <div class="topbar-menu">
-        <span id="toggle"><i class="topbar-toggle fas fa-bars fa"></i></span>
+        <!-- <span id="toggle"><i class="topbar-toggle fas fa-bars fa"></i></span> -->
 
-        <ul class="topbar-list" id="menu">
-            {% for i in site.topbar %}
+        <button class="hamburger hamburger--slider" type="button" aria-label="Menu" aria-controls="navigation">
+        <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+        </span>
+        </button>
 
-            {% capture url %}{{ i | downcase | slugify | append: "/" | prepend: "/" | replace: "/início/", "/" }}{% endcapture %}
-            {% capture page_url %}{{ page.url | replace: "index.html", "" }}{% endcapture %}
+        <nav id="navigation">
+            <ul class="topbar-list" id="menu">
+                {% for i in site.topbar %}
+    
+                {% capture url %}{{ i | downcase | slugify | append: "/" | prepend: "/" | replace: "/início/", "/" }}{% endcapture %}
+                {% capture page_url %}{{ page.url | replace: "index.html", "" }}{% endcapture %}
+    
+                <li class="topbar-item">
+                    {% if page_url == url %}
+                    <span class="topbar-text current">{{ i }}</span>
+                    {% else %}
+                    <a class="topbar-text" href="{{ url }}">{{ i }}</a>
+                    {% endif %}
+                </li>
+                {% endfor %}
+            </ul>
+        </nav>
 
-            <li class="topbar-item">
-                {% if page_url == url %}
-                <span class="topbar-text current">{{ i }}</span>
-                {% else %}
-                <a class="topbar-text" href="{{ url }}">{{ i }}</a>
-                {% endif %}
-            </li>
-            {% endfor %}
-        </ul>
+
+       
     </div>
 </div>
