--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/hamburgers.css' | relative_url }}">
+
 
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
 
